2004-01-03  Anders Carlsson  <andersca@gnome.org>

	* components/adapter/nautilus-adapter.c: (nautilus_adapter_new):
	* src/nautilus-navigation-bar.c:
	* src/nautilus-navigation-bar.h:
	* src/nautilus-navigation-window.c:
	* src/nautilus-spatial-window.c:
	(nautilus_spatial_window_instance_init):
	* src/nautilus-view-frame.c:
	* src/nautilus-view-frame.h:
	* src/nautilus-window.c:
	Remove use of EelGenerousBin, we can use a GtkBox with only one
	child for that instead.
	
	* test/Makefile.am:
	Don't use Eel stuff that no-one else uses.
	
2004-01-02  Dennis Cranston <dennis_cranston at yahoo com>
 
 	* src/nautilus-connect-server-dialog.c:
 	(nautilus_connect_server_dialog_init)
 	* src/nautilus-location-dialog.c:
 	(nautilus_location_dialog_init)
 	HIG fixes (add a missing mnemonic and correct the widget
 	padding) for the "Open Location" and "Connect to Server" 
 	dialogs.
 	
2003-01-02  Diego Gonzalez Gonzalez  <diego@pemas.net>

	* configure.in:
	* component/text/Makefile.am: files in services directory are
	  not used so they should not be installed.

2004-01-02  Dave Camp  <dave@ximian.com>

	* components/image_properties/nautilus-image-properties-view.c 
	(append_exifdata_string): Fixed a typo in the Focal Length field.  
	Patch from Stephane Wirtel <stephane.wirtel@belgacom.net>	

2004-01-02  Martin Wehner  <martin.wehner@epost.de>

	* libnautilus-private/nautilus-file-operations.c:
	Ensure the source isn't deleted as partial copy
	in a duplicate operation. Fixes bug #128095. 

=== nautilus 2.5.4 ===

2003-12-29  Alexander Larsson  <alexl@redhat.com>

	* Makefile.am (EXTRA_DIST):
	Add OrigTree.pm

	* NEWS: 
	* configure.in:
	Update to 2.5.4

2003-12-18  Alexander Larsson  <alexl@redhat.com>

	* libnautilus-private/nautilus-emblem-utils.c:
	* libnautilus-private/nautilus-icon-factory.[ch]:
	* src/nautilus-main.c:
	* src/nautilus-server-connect.c:
	* src/nautilus-window-manage-views.c:
	Use GtkIconTheme instead of GnomeIconTheme
